--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
             <li><a href="" class="active">Home</a></li>
             <li><a href="" >Products</a></li>
             <li><a href="" >About Us</a></li>
-            <li><a href="" >Cart</a></li>
-            <li><a href="" >Login</a></li>
+            <li><a href="contactus.html" >Contact Us</a></li>
+            <li><a href="Login valid/index.html" >Login</a></li>
             
         </ul>
         </nav>
         
         </div>
-        <div class="row">
+       <div class="row">
             <div class="col-2">
                 <h1>
                     At Your Doorsteps<br>
